fixed mobile navbar spacing

--- a/style.css
+++ b/style.css
@@ -12,11 +12,11 @@ body{
     left:0px;
     width:100%;
     display:grid;
-    grid-template-columns: 125px .25fr 1fr;
+    grid-template-columns: 125px 1fr;
     font-family: 'Montserrat', sans-serif;
 }
 
-#navspacer{
+#navdummy{
     width:100%;
     height:55px;
 }
@@ -32,14 +32,14 @@ body{
     padding-right:20px;
     
 }
-.nav ul{
+#navlist{
     margin-top: 15px;
     display:grid;
     grid-template-columns: repeat(3, 1fr);
     align-items: center;
     justify-items: center;
     list-style-type: none;
-
+    padding-left:0px;
 }
 .nav a{
     text-align:center;
